# mujoco-urdf-loader

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml
.github/workflows/: test-pixi.yaml  update-pixi-lockfile.yaml
examples/: generate_ergoCub_hand.py  generate_ergoCub_mjcf.py  generate_ergoCub_models.py  generate_ergoCub_torso.py  generate_ergoCub_xml.py  generate_iRonCub_mjcf.py
models/: generate_ergoCub_mjcf.py  generate_ergoCub_models.py  generate_ergoCub_torso.py  hands_fcn.py
models/functions/tests/: test_ergocub_generator.py  test_mjcf_fcn.py  test_urdf_fcn.py
models/generators/: generate_ergoCub_hand.py  generate_ergoCub_torso.py
models/tests/: test_ergocub_generator.py  test_mjcf_fcn.py  test_urdf_fcn.py
mujoco_urdf_loader/: __init__.py  generator.py  hands_fcn.py  loader.py  mjcf_fcn.py  urdf_fcn.py  wrapper.py
tests/: test_ergocub_generator.py  test_mjcf_fcn.py  test_urdf_fcn.py  test_urdf_to_mujoco_loader_class.py
